# faultsim

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
configs/scenarios/: README.md  adaptive.toml  baseline.toml  crash_adaptive.toml  crash_adaptive_accrual.toml  crash_gossip.toml  crash_phi_accrual.toml  crash_recovery.toml  custom_example.toml  drops_15pct.toml  drops_5pct.toml  gossip.toml  high_jitter.toml  high_jitter_adaptive.toml  high_jitter_adaptive_accrual.toml  high_jitter_adaptive_accrual_t3.toml  high_jitter_adaptive_accrual_w1000.toml  high_jitter_gossip.toml  high_jitter_phi_accrual.toml  partition.toml
docs/: architecture.md  demo.md  design.md  experiment-plan.md  overview.md  proposal.md  simulator.md
docs/figures/: architecture.tex
docs/logs/: 2026-04-02_initial-scaffold.md  2026-04-15_adaptive-accrual-detector.md  2026-04-15_phi-accrual-detector.md  2026-04-16_recent-literature-check.md
docs/results/: 2026-04-15_detector-comparison.md
scripts/: plot_phi_timeline.py  plot_results.py  run_experiment.sh
src/: aggregate.rs  clock.rs  config.rs  engine.rs  event.rs  lib.rs  main.rs  metrics.rs  network.rs  node.rs  scenario.rs
src/detector/: adaptive.rs  adaptive_accrual.rs  custom.rs  fixed_timeout.rs  gossip.rs  mod.rs  phi_accrual.rs
tests/: smoke.rs
