[package]
name = "faultsim"
version = "0.1.0"
edition = "2021"
description = "Discrete-event simulator for studying failure misclassification in distributed clusters"
license = "MIT"
repository = "https://github.com/Justin/faultsim"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
